# Iona-desktop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Iona-desktop.pro  README.md  iona_desktop.pro
Core/: Core.pro  iona_widget.ui  main_widget.ui
Core/assets/: resource.qrc
Core/include/core/: base_widget.h  core_global.h  gl_entry.h  gl_object_base.h  gl_widget.h  gl_widget_model.h  global_definitions.h  hexagon_base.h  hitbox_widget.h  iona_widget.h  main_widget.h  move_widget.h  native_event_filter.h  plugin_instance.h  plugin_interface.h  portrait_widget.h
Core/include/core_ex1/: data_ring.h  l2d.h  l2d_allocator.h  l2d_config.h  l2d_model.h  l2d_pal.h  l2d_sprite.h  l2d_tex_manager.h  l2d_touch_manager.h
Core/include/main_widget/: iona_widget.h  main_widget.h
Core/include/plugin_core/: plugin_interface.h  plugin_manager.h
Core/resources/: Iona_ver_0_5.moc3  Iona_ver_0_5.model3.json  Iona_ver_0_5.physics3.json  fs_general.frag  fs_mix2.frag  resources.qrc  vs_general.vert
Core/src/: base_widget.cpp  base_widget_config.cpp  base_widget_gl.cpp  base_widget_hitbox.cpp  base_widget_mask.cpp  base_widget_move.cpp  base_widget_plugins.cpp  base_widget_tray.cpp  base_widget_voice.cpp  data_ring.cpp  data_ring_models.cpp  data_ring_shader.cpp  data_ring_texture.cpp  gl_draw.cpp  gl_entry.cpp  gl_models.cpp  gl_shader.cpp  gl_texture.cpp  gl_widget.cpp  hitbox_widget.cpp  iona_widget.cpp  l2d.cpp  l2d_allocator.cpp  l2d_model.cpp  l2d_pal.cpp  l2d_sprite.cpp  l2d_tex_manager.cpp  l2d_touch_manager.cpp  main.cpp  main_widget.cpp  move_widget.cpp  native_event_filter.cpp  plugin_instance.cpp  plugin_manager.cpp  portrait_widget.cpp
Hook/: Hook.pro  hook.cpp  hook.h  hook_global.h
ResourceMonitor/: ResourceMonitor.pro  monitor_widget.ui
ResourceMonitor/include/resource_monitor/: hexagon_widget.h  hexagon_widget_base.h  hexagon_widget_progress.h  monitor_realization.h  monitor_widget.h  rm_global.h  rm_widget.h
ResourceMonitor/src/: hexagon_widget.cpp  hexagon_widget_base.cpp  hexagon_widget_progress.cpp  monitor_realization.cpp  monitor_widget.cpp  rm_entry.cpp  rm_widget.cpp
core_display/: CMakeLists.txt  core_display.pro
core_display/app/: CMakeLists.txt  app.pri  app_config.cpp  app_config.h  app_content.cpp  app_content.h  app_msg_handle.cpp  app_msg_handle.h  app_msg_handler.cpp  app_msg_handler.h  app_native_ev_filter.cpp  app_native_ev_filter.h  app_param.cpp  app_param.h  app_thread_helper.hpp  app_widget_container.cpp  app_widget_container.h  main.cpp
core_display/asm/: CMakeLists.txt  asm.cpp  asm.h
core_display/fsm/: CMakeLists.txt  fsm.cpp  fsm.h
core_display/hook/: CMakeLists.txt  hook.cpp  hook.h
core_display/iona_gl/: CMakeLists.txt  data_ring.cpp  data_ring.h  data_ring_model.cpp  gl_entry.cpp  gl_entry.h  gl_handle.cpp  gl_handle.h  gl_object_base.h  gl_widget.cpp  gl_widget.h  iona_gl.pri  l2d.cpp  l2d.h  l2d_allocator.cpp  l2d_config.h  l2d_model.cpp  l2d_model.h  l2d_pal.cpp  l2d_tex_manager.cpp  l2d_tex_manager.h  l2d_touch_manager.cpp  l2d_touch_manager.h  l2d_utils.h
core_display/move_ctrl/: CMakeLists.txt  move_ctrl.pri  move_widget.cpp  move_widget.h
core_display/quick_cmds/: CMakeLists.txt  quick_cmds.pri  quick_cmds_entry.cpp  quick_cmds_entry.h
core_display/resources/: Iona_ver_0_5.cdi3.json  resource_correspondece.md  resources.qrc  tbs.cdi3.json  tbs.moc3  tbs.model3.json  tbs.physics3.json
core_display/resources/motions/: asleep.motion3.json  curiosity.motion3.json  doubts.motion3.json
core_display/tray/: CMakeLists.txt  tray.cpp  tray.h  tray.pri
core_display/voice/: CMakeLists.txt  media_info.cpp  media_info.h  voice.pri  voice_label.cpp  voice_label.h  wav_handler.cpp  wav_handler.h
hook/: CMakeLists.txt  hook.cpp  hook.h  hook.pro
